--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <input type="file" id="file-input" name="fileContent">
 </div>
 </body>
+<script src='index.js'></script>
 <script>
 const open = () => {
 var fileInput = document.querySelector('#file-input');
